Fix error with grand_total not showing due to format error

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -53,7 +53,7 @@ select option[value=""] {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
+    background: rgba(198, 203, 219, 0.85);
     z-index: 9999;
 }
 
@@ -68,7 +68,6 @@ select option[value=""] {
 .checkout-page {
     padding-bottom: 5rem;
 }
-
 
 @media (max-width: 300px) {
 
